--- a/rewriteMicro copie.Rmd
+++ b/rewriteMicro copie.Rmd
@@ -46,7 +46,7 @@ That markdown should be converted to a straight R script which we can `source` f
 From the converted data, load all files and concatenate
 
 ```{r readData}
-dir = 'all_data/data_candidate_classIII_conv'
+dir = 'all_data/data_check_classI_conv'
 
 YFP_files = list.files(dir,pattern = "YFP.+?foci",full.names = TRUE,ignore.case = TRUE)
 
@@ -321,37 +321,41 @@ RYdf <- map(cluster_set_dist,function(m) {
   r <- grep("rf",rownames(m),value = TRUE)
   c <- grep("cf",colnames(m),value = TRUE)
 
-  # This is only considering colonies that have 
-  # exactly 3 signals
-  # this needs to be rewritten so it is more general
-  # this also is only looking for a minimum
-  # it is not implementing a static cutoff value
+rval <- c(rep(NA,10))
+names(rval) <- c("r1y1","cy1","cr1","y1y2","y2r1","y2c","y1r2","r1r2","r2c","r2y2")
+return(rval)
 
-  if (length(y)+length(r)+length(c) > 3 |
-      length(y)+length(r)+length(c) < 2) {
-    rval <- c(NA,NA,NA)
-    names(rval) <- c("ry","cy","cr")
-    return(rval)
-  } else {
-    if(is_empty(r) | is_empty(y)) ry=NA
-    else ry = min(m[r,y])
-    if(is_empty(c) | is_empty(y)) cy=NA
-    else cy = min(m[c,y])
-    if(is_empty(c) | is_empty(r)) cr=NA
-    else cr = min(m[c,r])
-    rval <- c(ry,cy,cr)
-    names(rval) <- c("ry","cy","cr")
-    return(rval)
-  }
+case_when((is_empty(r[1]) | is_empty(y[1])) ~ RYdf$r1y1 <- NA,
+          (is_empty(c) | is_empty(y[1])) ~ RYdf$cy1 <- NA,
+          (is_empty(c) | is_empty(r[1])) ~ RYdf$cr1 <- NA,
+          (is_empty(y[1]) | is_empty(y[2])) ~ RYdf$y1y2 <- NA,
+          (is_empty(y[2]) | is_empty(r[1])) ~ RYdf$y2r1 <- NA,
+          (is_empty(c) | is_empty(y[2])) ~ RYdf$y2c <- NA,
+          (is_empty(y[1]) | is_empty(r[2])) ~ RYdf$y1r2 <- NA,
+          (is_empty(r[1]) | is_empty(r[2])) ~ RYdf$r1r2 <- NA,
+          (is_empty(r[2]) | is_empty(c)) ~ RYdf$r2c <- NA,
+          (is_empty(r[2]) | is_empty(y[2])) ~ RYdf$r2y2 <- NA,
+          (!is_empty(r[1]) | !is_empty(y[1])) ~ RYdf$r1y1 <- min(m[r,y]),
+          (!is_empty(c) | !is_empty(y[1])) ~ RYdf$cy1 <- min(m[c,y[1]]),
+          (!is_empty(c) | !is_empty(r[1])) ~ RYdf$cr1 <- min(m[c,r[1]]),
+          (!is_empty(y[1]) | !is_empty(y[2])) ~ RYdf$y1y2 <- min(m[y[1],y[2]]),
+          (!is_empty(y[2]) | !is_empty(r[1])) ~ RYdf$y2r1 <- min(m[y[2],r[1]]),
+          (!is_empty(c) | !is_empty(y[2])) ~ RYdf$y2c <- min(m[c,y[2]]),
+          (!is_empty(y[1]) | !is_empty(r[2])) ~ RYdf$y1r2 <- min(m[y[1],r[2]]),
+          (!is_empty(r[1]) | !is_empty(r[2])) ~ RYdf$r1r2 <- min(m[r[1],r[2]]),
+          (!is_empty(r[2]) | !is_empty(c)) ~ RYdf$r2c <- min(m[r[2],c]),
+          (is_empty(r[2]) | is_empty(y[2])) ~ RYdf$r2y2 <- min(m[r[2],y[2]]))
+rval <- c(r1y1,cy1,cr1, y1y2,y2r1,y2c,y1r2,r1r2,r2c,r2y2)
+names(rval) <- c("r1y1","cy1","cr1","y1y2","y2r1","y2c","y1r2","r1r2","r2c","r2y2")
+return(rval)
 }) %>%
   as_tibble() %>%
   t() %>%
   as.data.frame() %>%
   rownames_to_column("sample.field.group") %>%
-  rename(c("ry"=V1,"cy"=V2,"cr"=V3)) %>%
+  rename(c("r1y1"=V1,"cy1"=V2,"cr1"=V3,"y1y2"=V4,"y2r1"=V5,"y2c"=V6,"y1r2"=V7,"r1r2"=V8,"r2c"=V9,"r2y2"=V10)) %>%
   separate(col=sample.field.group,into = c("sample","field","cluster_number"),sep = "\\.") %>%
   mutate(cluster_number = as.integer(cluster_number))
-
 
 # apply filters here
 final_df <- inbound_nuclei %>%
@@ -377,38 +381,38 @@ table_one <- final_df %>%
   arrange(as.numeric(str_remove(sample,"c")),desc(n)) %>%
   ungroup()
 
-table_two <- final_df %>%
-  filter(signal_code == "cfp nuc rfp yfp") %>%
-  mutate(coloc = case_when(
-    (ry < cy) & (ry < cr) ~ "ry",
-    (cy < ry) & (cy < cr) ~ "cy",
-    (cr < cy) & (cr < ry) ~ "cr",
-  )) %>%
-  group_by(sample) %>%
-  count(coloc) %>%
-  arrange(as.numeric(str_remove(sample,"c")),desc(n))
+#table_two <- final_df %>%
+  #filter(signal_code == "cfp nuc rfp yfp") %>%
+  #mutate(coloc = case_when(
+  #  (ry < cy) & (ry < cr) ~ "ry",
+  #  (cy < ry) & (cy < cr) ~ "cy",
+  #  (cr < cy) & (cr < ry) ~ "cr",
+  #)) %>%
+  #group_by(sample) %>%
+  #count(coloc) %>%
+  #arrange(as.numeric(str_remove(sample,"c")),desc(n))
 
 
-signal_codes <- table_one %>%
-  complete(sample,signal_code,fill = list(n=0)) %>%
-  group_by(sample) %>%
-  mutate(
-    prop = n/sum(n)
-  ) %>%
-  ungroup() %>%
-  select(-n) %>%
-  pivot_wider(names_from = signal_code,values_from = prop) %>%
-  column_to_rownames(var = "sample")
+#signal_codes <- table_one %>%
+  #complete(sample,signal_code,fill = list(n=0)) %>%
+  #group_by(sample) %>%
+  #mutate(
+  #  prop = n/sum(n)
+  #) %>%
+  #ungroup() %>%
+  #select(-n) %>%
+  #pivot_wider(names_from = signal_code,values_from = prop) %>%
+  #column_to_rownames(var = "sample")
 
 
-library(kableExtra)
-kbl(table_one,
-    col.names = c("Sample","Signals","n"),
-    align = c('c','c','c'))
+#library(kableExtra)
+#kbl(table_one,
+    #col.names = c("Sample","Signals","n"),
+    #align = c('c','c','c'))
 
-kbl(table_two,
-    col.names = c("Sample "," co-localized ","n"),
-    align = c('c','c','c'))
+#kbl(table_two,
+    #col.names = c("Sample "," co-localized ","n"),
+    #align = c('c','c','c'))
 ```
 
 Now we can present the signals graphically for the whole set
